<resources>
    <string name="app_name">SwiftBraille</string>
    <string name="app_description" translatable="false">Connect the dots!</string>
    <string name="not_braille_code">This is not a Braille code!</string>
    <string name="app_keyboard_description">SwiftBraille keyboard</string>
    <string name="version">Version %1$s</string>
    <string name="loading_text">Loading&#8230;</string>
    <string name="reset_settings">Reset all settings</string>
    <string name="caution">Caution</string>
    <string name="more_details">More details</string>
    <string name="general_settings_text">General settings</string>
    <string name="braille_dots_positions">Braille dots positions</string>
    <string name="features">Features</string>
    <string name="got_it">Got it</string>
    <string name="settings_title">SwiftBraille settings</string>
    <string name="reset_settings_done">Settings have been reset</string>
    <string name="app_shows_en_keyboard">Swift Braille shows English keyboard</string>
    <string name="app_shows_ar_keyboard">Swift Braille shows Arabic keyboard</string>
    <string name="app_shows_es_keyboard">Swift Braille shows Spanish keyboard</string>
    <string name="app_shows_fr_keyboard">Swift Braille shows French keyboard</string>
    <string name="app_is_hidden">Swift Braille keyboard is hidden now</string>
    <string name="app_final_text">and the final text is</string>
    <string name="multi_touch_device_support">Great! Your device supports multi-touch with six fingers.</string>
    <string name="multi_touch_device_not_support">Hmm..your device does not support multi-touch with six fingers!</string>
    <string name="coming_soon_title">Coming soon</string>
    <string name="special_tools_coming_soon">This section is under development.</string>
    <string name="swift_braille_is_default_keyboard">High five! SwiftBraille is the default keyboard!</string>
    <string name="swift_braille_is_not_default_keyboard_text">Ooh no! SwiftBraille is not the default keyboard!</string>
    <string name="activate_btn">1. Activate</string>
    <string name="set_default_btn">2. Set default</string>
    <string name="customize_btn">3. Customize</string>
    <string name="training_input_title">Type anything?</string>
    <string name="training_input_hint">Write something…</string>
    <string name="about_description">Swift Braille is a soft keyboard customized for blind and visually impaired to let them type using Braille language, by connecting Braille dots or tap over them. You can type letters, numbers, math symobls, and other special symbols (refer to the blog for more details). Developed by Mohammad M. AlBanna</string>
    <string name="part_of">Part of MBanna.info projects</string>
    <string name="facebook_icon">Swift Braille on Facebook</string>
    <string name="twitter_icon">Swift Braille on Twitter</string>
    <string name="youtube_icon">Swift Braille on YouTube</string>
    <string name="website_icon">Website of Swift Braille</string>
    <string name="activate_gesture">Activate gestures</string>
    <string name="operation_bars_text">Show operations bars</string>
    <string name="vibration_on_dot_tap">Vibration on tap over Braille dots</string>
    <string name="capitalize_first_word">Capitalize first character of the sentence</string>
    <string name="start_braille_dots_from_right">Start Braille dots from the right of screen</string>
    <string name="new_line_hides_keyboard">Hide the keyboard when I type a new line (single line inputs text)</string>
    <string name="prevent_rotation">Prevent screen rotation when the keyboard is opened</string>
    <string name="moves_over_dots_description">Consider the dot after I stop over it within</string>
    <string name="get_selected_dots_description">Recognize selected dots after</string>
    <string name="stop_one_second">After stop one second</string>
    <string name="stop_half_second">After stop half a second</string>
    <string name="after_half_second">After half a second</string>
    <string name="no_stop_when_hover">When I move over it</string>
    <string name="no_period_selected_dots">Once all fingers left the screen</string>
    <string name="after_one_second">After one second</string>
    <string name="after_two_seconds">After two seconds</string>
    <string name="after_one_and_half_second">After one and half a second</string>
    <string name="milliseconds">%1$d ms</string>
    <string name="gestures_and_ops_bars_inactivated">Gestures and operations bars are inactivated! You will not be able to change keyboard languages or types!</string>
    <string name="make_dot_2_5_higher">Let dots two and five higher than other dots</string>
    <string name="caution_dots_layout_1">Changing Braille dots layout might change the default settings and show or hide others.</string>
    <string name="braille_cell_layout">Braille cell layout</string>
    <string name="braille_cell_layout_description">Show the six of Braille dots like they are represented in a Braille cell.</string>
    <string name="braille_cell_layout_selected">Braille cell layout is selected</string>
    <string name="braille_cell_layout_not_selected">Braille cell layout is not selected</string>
    <string name="perkins_layout">Perkins layout</string>
    <string name="perkins_layout_description">Show the six of Braille dots in one line and type as Perkins machine does.</string>
    <string name="perkins_layout_selected">Perkins layout is selected</string>
    <string name="perkins_layout_not_selected">Perkins layout is not selected</string>
    <string name="two_rows_layout">Two horizontal layout</string>
    <string name="two_rows_layout_description">Show the six of Braille dots in two lines horizontally at the bottom of the keyboard.</string>
    <string name="two_rows_layout_selected">Two horizontal layout is selected</string>
    <string name="two_rows_layout_not_selected">Two horizontal rows layout is not selected</string>
    <string name="current_selected_color">Current selected color</string>
    <string name="previous_selected_color">Previous selected color</string>
    <string name="color_picker_fill_dot_title">Choose dots fill color</string>
    <string name="color_picker_stroke_dot_title">Choose dots stroke color</string>
    <string name="dot_fill_color">Dot fill color</string>
    <string name="dot_fill_color_description">Change Braille dots fill color</string>
    <string name="dot_stroke_color">Dot stroke color</string>
    <string name="dot_stroke_color_description">Change Braille dots stroke color</string>
    <string name="dot_radius">Dot radius</string>
    <string name="keyboard_portrait_height">In portrait mode:</string>
    <string name="keyboard_landscape_height">In landscape mode:</string>
    <string name="fill_dot_on_touch">Fill dots on tap or hover</string>
    <string name="view_braille_dot_number_text">Show Braille dots number</string>
    <string name="color_picker_select_color">OK</string>
    <string name="keyboard_right_position">Start the keyboard from the right of the screen</string>
    <string name="keyboard_dimensions">Keyboard dimensions</string>
    <string name="keyboard_height">Keyboard height</string>
    <string name="keyboard_width">Keyboard width</string>
    <string name="will_change_radius">Changing these settings will change the dots radius!</string>
    <string name="keyboard_language_caution">Changing active input methods languages might change the default keyboard language, show, or hide other settings.</string>
    <string name="one_lang_must_selected">At least one language must be selected!</string>
    <string name="active_input_methods">Active input methods</string>
    <string name="english_language_method" translatable="false">English</string>
    <string name="arabic_language_method" translatable="false">العربية</string>
    <string name="spanish_language_method" translatable="false">Español</string>
    <string name="french_language_method" translatable="false">Français</string>
    <string name="dots_layout">Dots layout</string>
    <string name="dot_style">Dots style</string>
    <string name="keyboard_languages">Keyboard languages</string>
    <string name="default_keyboard_language">Default keyboard languages</string>
    <string name="sounds_item">Sounds</string>
    <string name="advanced_item">Advanced settings</string>
    <string name="special_tools_item">Special items</string>
    <string name="about_title">About</string>
    <string name="sound_over_braille_dot">Dot sound</string>
    <string name="tts_engines_item">Text to speech engines</string>
    <string name="activate_voice_sound">Activate voice input</string>
    <string name="talk_back_char">Use TTS to talk back each typed character or word</string>
    <string name="play_always_stored_voices">Play always stored voices (Arabic language)</string>
    <string name="read_written_text">Read the written text after I close the keyboard</string>
    <string name="no_braille_dot_sound">None</string>
    <string name="tick_braille_dot_sound">Tick sound</string>
    <string name="dorime_braille_dot_sound">Do Ri Me… sound</string>
    <string name="number_braille_dot_sound">Dot number sound</string>
    <string name="ops_bars_off_for_voice_input">It seems operations bars are inactivated, please activate them to use this feature correctly!</string>
    <string name="hide_keyboard">Hide keyboard</string>
    <string name="space">Space</string>
    <string name="new_line">New line</string>
    <string name="back_space">%1$s deleted</string>
    <string name="full_text_deletion">All text has been removed</string>
    <string name="word_deletion">The word %1$s has been removed</string>
    <string name="change_keyboard_language">Change keyboard language</string>
    <string name="change_keyboard_pattern">Change keyboard type</string>
    <string name="texts">Texts </string>
    <string name="voice_input">Voice Input</string>
    <string name="copy_text">Copy </string>
    <string name="paste_text">Paste</string>
    <string name="remove_last_char">Backspace</string>
    <string name="remove_last_word">Remove last word</string>
    <string name="remove_all_text">Remove all text</string>
    <string name="text_copied">Text copied</string>
    <string name="text_pasted">Text pasted</string>
    <string name="swiftbraille_store_link" translatable="false">https://play.google.com/store/apps/details?id=com.mbanna.swiftbraille</string>
    <string name="braille_cell_layout_dialog_description">This layout will show the six dots of Braille as they are represented in Braille cell, and this is the default layout.</string>
    <string name="braille_cell_first_dot_position">- First dot: Left top of the keyboard.</string>
    <string name="braille_cell_second_dot_position">- Second dot: Left center of the keyboard.</string>
    <string name="braille_cell_third_dot_position">- Third dot: Left bottom of the keyboard.</string>
    <string name="braille_cell_fourth_dot_position">- Fourth dot: Right top of the keyboard.</string>
    <string name="braille_cell_fifth_dot_position">- Fifth dot: Right center of the keyboard.</string>
    <string name="braille_cell_sixth_dot_position">- Sixth dot: Right center of the keyboard.</string>
    <string name="braille_cell_feature_1">- This layout is a good choice for those who love typing in one hand and one finger by connecting the needed dots together.</string>
    <string name="braille_cell_feature_2">- You can change the start position of Braille dots to be started from the right of the keyboard, from advanced settings screen.</string>
    <string name="braille_cell_feature_3">- You can use gestures in the middle of the screen, outside the dots.</string>
    <string name="braille_cell_feature_4">- You can type using the six fingers, if you reversed the Braille dots to start from the right of the keyboard. Make sure from screen reader to be off to use multi-touch correctly.</string>
</resources>