<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/swiftBrailleBG"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/braille_cell_layout"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_dots_layout_braille_cell_48dp" />

        <TextView
            android:textColor="@color/secondaryText"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/braille_cell_layout_dialog_description" />

        <TextView
            android:visibility="gone"
            android:id="@+id/deviceSupportsMultiTouch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multi_touch_device_support"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorAccent" />

        <TextView
            android:visibility="gone"
            android:id="@+id/deviceDoesNotSupportsMultiTouch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multi_touch_device_not_support"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorRed" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/braille_dots_positions"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primaryText" />

        <!-- Separator -->
        <include layout="@layout/title_separator" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/braille_cell_first_dot_position"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/secondaryText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/braille_cell_second_dot_position"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/secondaryText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/braille_cell_third_dot_position"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/secondaryText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/braille_cell_fourth_dot_position"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/secondaryText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/braille_cell_fifth_dot_position"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/secondaryText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/braille_cell_sixth_dot_position"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/secondaryText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/features"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primaryText" />

        <!-- Separator -->
        <include layout="@layout/title_separator" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/braille_cell_feature_1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/secondaryText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/braille_cell_feature_2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/secondaryText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/braille_cell_feature_3"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/secondaryText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/braille_cell_feature_4"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/secondaryText" />

        <Button
            android:id="@+id/goToLocalSettings"
            style="@style/btnStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="closeDialogAction"
            android:text="@string/got_it" />
    </LinearLayout>
</ScrollView>